k8s/mockserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mockserver
    release: mockserver
  name: mockserver
  namespace: mockserver
spec:
  ports:
    - name: serviceport
      nodePort: 30282
      port: 1080
      protocol: TCP
      targetPort: serviceport
  selector:
    app: mockserver
    release: mockserver
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mockserver
    release: mockserver
  name: mockserver
  namespace: mockserver
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mockserver
      release: mockserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mockserver
        release: mockserver
      name: mockserver
    spec:
      containers:
        - env:
            - name: LOG_LEVEL
              value: INFO
            - name: SERVER_PORT
              value: "1080"
          image: oscneira/mockserver:5.9.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: serviceport
            timeoutSeconds: 1
          name: mockserver
          ports:
            - containerPort: 1080
              name: serviceport
              protocol: TCP
          readinessProbe:
            failureThreshold: 10
            initialDelaySeconds: 2
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: serviceport
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      terminationGracePeriodSeconds: 30
