k8s/mockserver-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  name: mock-server-chunk-config-test
  namespace: mockserver
spec:
  rules:
    - host: example.mockserver.com
      http:
        paths:
          - backend:
              serviceName: mockserver
              servicePort: 1080
            path: /
